--- a/Lawyer/Lawyer/Views/Home/Index.cshtml
+++ b/Lawyer/Lawyer/Views/Home/Index.cshtml
@@ -62,7 +62,7 @@
     </div>
 
     <div class="services text-right" id="service" style="background:black; padding-top:20px">
-        <div class="container"><h2 style="color:gold"  class="text-capitalize text-center">לשירותכם המידע הבא</h2></div>
+        <div class="container"><h2 class="text-gold text-center">לשירותכם המידע הבא</h2></div>
         <div class="services-child">
             <div class="container">
                 <div class="col">
