--- a/Lawyer/Lawyer/Views/QandAs/Index.cshtml
+++ b/Lawyer/Lawyer/Views/QandAs/Index.cshtml
@@ -1,10 +1,43 @@
 ﻿@model IEnumerable<BE.QandA>
 
 @{
-    Layout = "~/Views/Shared/Layout_AB.cshtml";
+    //Layout = "~/Views/Shared/Layout_AB.cshtml";
+    Layout ="~/Views/Shared/DictionaryLayout.cshtml";
 }
 
-<!DOCTYPE html>
+<h1 class="text-gold">שם המושג</h1>
+<hr />
+<p class="ml-5">
+    סוגי טקסטים
+    קיימות גישות שונות לאפיון סוגי טקסטים.
+
+    חלוקה על פי מטרת הטקסט[6]
+    טקסט היצגי - מטרתו לתת לקורא מידע.
+    טקסט שכנועי - מטרתו לגרום לקורא לשנות את דעתו באמצעות שימוש בנימוקים רציונליים.
+    טקסט תיאורי - מטרתו לגרום לקורא להבין, לראות או להרגיש משהו שהכותב עצמו ראה, חווה או דמיין.
+    טקסט סיפורי - מטרתו להציג בפני הקורא אירוע כלשהו באמצעות תיאור התרחשותו בזמן.
+    חלוקה על פי תוכן הטקסט[7]
+    טקסט סיפורי, תיאורי - מספר סיפור דמיוני או מציאותי.
+    טקסט מידעי - מציג עובדות, נתונים וממצאים, יוצא מתוך גישה מדעית ושואף לאובייקטיבית ללא נוכחות הכותב.
+    טקסט טיעוני - מציג טיעון של הכותב וניסיון להוכיח את נכונותו.
+    טקסט מדריך ומפעיל -מכיל הוראות לקורא לביצוע פעולה מסוימת .
+    טקסט ביקורתי - בוחן ובודק תופעה, מצב, התנהגות או פעילות תרבותית.
+    חלוקה דו-ממדית[8]
+    שלושה ממדים של מבנה התשתית של הטקסט - מבנה תשתית תיאורי הנשען על יחסים במרחב, מבנה תשתית סיפורי הנשען על יחסי זמן ועל אירועים, ומבנה תשתית היצגי הנשען על יחסים לוגיים.
+    ארבעה ממדים של כוחו של הטקסט להשיג אפקט מסוים - הכוח ליידע, הכוח לבדר, הכוח לשכנע והכוח להשיג אפקט ספרותי אסתטי.
+    אפיון על פי תכונותיו החיצוניות של הטקסט
+    המוען – מיהו הכותב?
+    הנמען – מי קהל היעד של הטקסט?
+    המדיום - באיזו מסגרת פורסם הטקסט?
+    התאריך – מתי הטקסט פורסם והאם עדיין אקטואלי?
+    הטקסט הפוסט-סטרוקטורליסטי
+    ז'אק דרידה, אחד ההוגים המשתייכים לזרם הפוסט-סטרוקטורליסטי, מערער על קיומה של משמעות קבועה ויציבה של הלשון ופיתח את הטכניקה של קריאה "מפרקת" של טקסטים (דה-קונסטרוקציה). הוא רואה את הלשון כמורכבת מרשת של סימנים שכל אחד מהם מחזיק בתוכו אינסוף משמעויות, והטקסט מוגדר כרשת של סימנים כאלה. דרידה טוען שלא ניתן להכיל את כל המשמעויות של הטקסט על ידי הגישות הביקורתיות והניתוחיות השגרתיות המתבססות על קטגוריות קבועות ויציבות. הביקורת הפוסט-סטרוקטורליסטית של טקסטים והקריאה ה"מפרקת" שלהם מראה כיצד הטקסט עצמו חותר תחת החוקיות שלכאורה מוצגת בו. תפיסה זו מערערת גם על היותו של מחבר הטקסט זה שקובע את משמעותו - הטקסט פתוח לפרשנות של כל קורא[9].
+
+    בנוסף, הפוסט-סטרוקטורליזם מדגיש את העובדה שאין לטקסט גבולות יציבים. בכל טקסט ניתן למצוא עקבות, ציטוטים, חיקויים או פרשנויות של טקסטים קודמים לו, ולא ניתן לבודד אף טקסט ממערכת קשרים זו: "הטקסט הוא רקמה של ציטוטים המגיעים אליו מאינספור חדריה של התרבות"[10].
+
+    הפוסט-סטרוקטורליזם מתייחס למושג 'טקסט' ככולל כל מה שהוא תוצר של מערכות סימון אנושיות (לא רק לשוניות), ואשר נושא משמעות או חותר תחתיה[11].
+</p>
+@*<!DOCTYPE html>
 
 <html>
 <head>
@@ -45,4 +78,4 @@
 
     </table>
 </body>
-</html>
+</html>*@
