--- a/Lawyer/Lawyer/Views/Shared/_Layout.cshtml
+++ b/Lawyer/Lawyer/Views/Shared/_Layout.cshtml
@@ -10,43 +10,43 @@
     <link rel="stylesheet" href="/css/buttons.css">
 </head>
 <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container">
-                <a class="navbar-brand" href="index.html"><img src="/imgs/logo.png" width="200" alt="#" /></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-links" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+    <nav style="background-color:#000000;position:fixed" class="navbar navbar-expand-lg navbar-light">
+        <div class="container">
+            <a class="navbar-brand" href="index.html"><img src="/imgs/logo.png" width="200" alt="#" /></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-links" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-                <div class="collapse navbar-collapse text-capitalize" id="nav-links">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#about">הכירו את יעל <span class="sr-only"></span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="~/Verdicts">חקיקה</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="~/legislations">תקצירי פסיקה</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="~/QandA">שאילתות</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="~/Terms">מונחים</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link log" href="#">האם אתה מנהל האתר?</a>
-                        </li>
-                        @*<li class="nav-item search">
-                                <a class="nav-link search-link" href=""><i class="fas fa-search"></i></a>
-                                <form>
-                                    <input type="search">
-                                </form>
-                            </li>*@
-                    </ul>
-                </div>
+            <div class="collapse navbar-collapse text-capitalize" id="nav-links">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#about">הכירו את יעל <span class="sr-only"></span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="~/Verdicts">חקיקה</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="~/legislations">תקצירי פסיקה</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="~/QandA">שאילתות</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="~/Terms">מונחים</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="text-gold nav-link log" href="#">האם אתה מנהל האתר?</a>
+                    </li>
+                    @*<li class="nav-item search">
+                            <a class="nav-link search-link" href=""><i class="fas fa-search"></i></a>
+                            <form>
+                                <input type="search">
+                            </form>
+                        </li>*@
+                </ul>
             </div>
-        </nav>
+        </div>
+    </nav>
     @RenderBody()
     <footer>
         <div class="container">
