--- a/Lawyer/Lawyer/Views/Shared/DictionaryLayout.cshtml
+++ b/Lawyer/Lawyer/Views/Shared/DictionaryLayout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using BE;
+<!DOCTYPE html>
 <html dir="rtl">
 <head>
     <meta charset="utf-8">
@@ -8,6 +9,18 @@
     <link rel="stylesheet" href="/css/fontawesome.min.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/buttons.css">
+    <script>
+        function ShowQuestions(button) {
+            for (var i = 1; i < 23; i++) {
+                if (button.name == i.toString()) {
+                    if (document.getElementById(i.toString()).hidden == "")
+                        document.getElementById(i.toString()).hidden = "hidden";
+                    else
+                        document.getElementById(i.toString()).hidden = "";
+                }
+            }
+        }
+    </script>
 </head>
 <body>
     <div >
@@ -54,21 +67,63 @@
     <nav class="main-menu">
         <br />
         <ul>
+            @{
+                int counter = 1;
+                foreach (var letter in Enum.GetValues(typeof(Enums.AlphaAndBeta)))
+                {
             <li>
-                <a href="~/Groups">
+                <a name=@counter onclick="ShowQuestions(this)">
                     <i class="fa-icon fa-2x"></i>
                     <span class="nav-text">
-                        א
+                        @letter.ToString()
                     </span>
                 </a>
+                <div id=@counter.ToString() hidden="hidden">
+                    <a href="#">
+                        <i class="fa-icon fa-2x"></i>
+                        <span class="nav-text">
+                            אבלים
+                        </span>
+                    </a>
+                </div>
+                @{counter += 1;}
             </li>
-            <li>
+                }
+            }
+
+            @*<li>
                 <a href="~/Groups">
                     <i class="fa-icon fa-2x"></i>
                     <span class="nav-text">
                         ב
                     </span>
                 </a>
+                <div hidden="hidden">
+                    <a href="#">
+                        <i class="fa-icon fa-2x"></i>
+                        <span class="nav-text">
+                            בגידה
+                        </span>
+                    </a>
+                    <a href="#">
+                        <i class="fa-icon fa-2x"></i>
+                        <span class="nav-text">
+                            בגידה
+                        </span>
+                    </a>
+                    <a href="#">
+                        <i class="fa-icon fa-2x"></i>
+                        <span class="nav-text">
+                            בגידה
+                        </span>
+                    </a>
+                    <a href="#">
+                        <i class="fa-icon fa-2x"></i>
+                        <span class="nav-text">
+                            בגידה
+                        </span>
+                    </a>
+                </div>
             </li>
             <li>
                 <a href="~/Groups">
@@ -114,7 +169,7 @@
                 <a href="~/Groups">
                     <i class="fa-icon fa-2x"></i>
                     <span class="nav-text">
-                        א
+                        ח
                     </span>
                 </a>
             </li>
@@ -122,7 +177,7 @@
                 <a href="~/Groups">
                     <i class="fa-icon fa-2x"></i>
                     <span class="nav-text">
-                        א
+                        ט
                     </span>
                 </a>
             </li>
@@ -130,7 +185,7 @@
                 <a href="~/Groups">
                     <i class="fa-icon fa-2x"></i>
                     <span class="nav-text">
-                        א
+                        י
                     </span>
                 </a>
             </li>
@@ -138,7 +193,7 @@
                 <a href="~/Groups">
                     <i class="fa-icon fa-2x"></i>
                     <span class="nav-text">
-                        א
+                        כ
                     </span>
                 </a>
             </li>
@@ -146,7 +201,7 @@
                 <a href="~/Groups">
                     <i class="fa-icon fa-2x"></i>
                     <span class="nav-text">
-                        א
+                        ל
                     </span>
                 </a>
             </li>
@@ -154,7 +209,7 @@
                 <a href="~/Groups">
                     <i class="fa-icon fa-2x"></i>
                     <span class="nav-text">
-                        א
+                        מ
                     </span>
                 </a>
             </li>
@@ -162,7 +217,7 @@
                 <a href="~/Groups">
                     <i class="fa-icon fa-2x"></i>
                     <span class="nav-text">
-                        א
+                        נ
                     </span>
                 </a>
             </li>
@@ -170,7 +225,7 @@
                 <a href="~/Groups">
                     <i class="fa-icon fa-2x"></i>
                     <span class="nav-text">
-                        א
+                        ס
                     </span>
                 </a>
             </li>
@@ -178,7 +233,7 @@
                 <a href="~/Groups">
                     <i class="fa-icon fa-2x"></i>
                     <span class="nav-text">
-                        א
+                        ע
                     </span>
                 </a>
             </li>
@@ -186,7 +241,7 @@
                 <a href="~/Groups">
                     <i class="fa-icon fa-2x"></i>
                     <span class="nav-text">
-                        א
+                        פ
                     </span>
                 </a>
             </li>
@@ -194,7 +249,7 @@
                 <a href="~/Groups">
                     <i class="fa-icon fa-2x"></i>
                     <span class="nav-text">
-                        א
+                        צ
                     </span>
                 </a>
             </li>
@@ -202,7 +257,7 @@
                 <a href="~/Groups">
                     <i class="fa-icon fa-2x"></i>
                     <span class="nav-text">
-                        א
+                        ק
                     </span>
                 </a>
             </li>
@@ -210,7 +265,7 @@
                 <a href="~/Groups">
                     <i class="fa-icon fa-2x"></i>
                     <span class="nav-text">
-                        א
+                        ר
                     </span>
                 </a>
             </li>
@@ -218,7 +273,7 @@
                 <a href="~/Groups">
                     <i class="fa-icon fa-2x"></i>
                     <span class="nav-text">
-                        א
+                        ש
                     </span>
                 </a>
             </li>
@@ -226,10 +281,10 @@
                 <a href="~/Groups">
                     <i class="fa-icon fa-2x"></i>
                     <span class="nav-text">
-                        א
+                        ת
                     </span>
                 </a>
-            </li>
+            </li>*@
         </ul>
     </nav>
     <div class="area">
